--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,13 @@
 
     <string name="app_name">Sunshine</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+
 
     <string name="list_item_forecast_text_view">Today - Sunny - 88 / 63</string>
+
+
+   <!-- Menu -->
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
 
 </resources>
